# mythryl

./: .gitignore  CLAUDE.md  drizzle.config.ts  eslint.config.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
.claude/: settings.local.json
drizzle/: 0000_zippy_husk.sql  0001_thin_garia.sql  0002_thick_strong_guy.sql  0003_rich_nitro.sql  0004_pink_energizer.sql  0005_icy_tomorrow_man.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
src/: env.app.ts  env.worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx
src/app/(app)/: layout.tsx  loading.tsx  page.tsx
src/app/demo/: page.tsx
src/components/actions/: actions.cast.tsx  actions.clank.tsx  actions.copy-image.tsx  actions.download.tsx
src/hooks/: use-countdown.ts  use-image-upload.tsx  use-switch-chain.tsx  use-upload-file.tsx  viem.hooks.tsx
src/lib/: format.ts  image-processor.ts  map.ts  tauri.ts  utils.ts
src/services/: alchemy.service.ts  chains.service.ts  embed.service.ts  emoji.service.ts  image.service.ts  metadata.service.ts  neynar.service.ts  notifications.service.ts  opensea.service.ts  s3.service.ts  share.service.ts  thirdweb.service.ts  url.service.ts  versions.service.ts  viem.service.ts
src/styles/: colors.css  farcaster-auth.css  farcaster.css  globals.css
src/trpc/: react.tsx  server.ts
(+281 files in other folders)
